--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "ts-node": "^10.9.2"
   }
 }
